--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                  <li><p> <i class="fas fa-map-marker-alt"></i> Home , Ground Floor  </p> </li>
                                  <li> <p><i class="fas fa-phone-square"></i> Phone: +254 723 456 78 </p> </li>
                                  <li> <p><i class="fas fa-envelope"></i> Email: info@wawck3r.com</p></li>
-                                 <li> <p>&copy; <a href="admin/contact.php">luffysdrip</a></p></li>
+                                 <li> <p>&copy;luffysdrip</p></li>
                              </ul>
                          </div>
                       </div>
